--- a/ContinuousWeb/Views/_ViewImports.cshtml
+++ b/ContinuousWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using ContinuousDeployment
-@using ContinuousDeployment.Models
+@using ContinuousWeb
+@using ContinuousWeb.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
